Fixed searchbar position shifting based on username lenght

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -64,3 +64,55 @@ body {
   object-fit: contain;
 }
 
+
+
+/*Parte Utente */
+
+
+
+
+.user-menu-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+/* Bottone utente */
+
+
+/* Dropdown nascosto di base */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 60px; /* sotto al bottone */
+  left: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  padding: 8px 0;
+  min-width: 128px;
+  box-shadow: 0px 2px 10px rgba(0,0,0,0.1);
+  z-index: 10;
+}
+
+/* Dropdown visibile quando 'show' è attivo . Quando dropdown ha anche show allora chiama .dropdown-content però con questa modifica la display*/
+.dropdown.show .dropdown-content {
+  display: block;
+}
+
+/* Link e voci nel menu */
+.dropdown-content a,
+.dropdown-content div {
+  display: block;
+  padding: 8px 16px;
+  color: #333;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.dropdown-content a:hover,
+.dropdown-content div:hover {
+  background-color: #f0f0f0;
+}
+
